--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,21 @@
 version: '3'
 services:
 
-  monitor.paicoop.net:
+  monitor-server:
     image: cppla/serverstatus:arm
     container_name: monitor-server
     restart: always
     volumes:
       - "./config.json:/ServerStatus/server/config.json"
-#   ports:
+    ports:
 #     - "35601:35601"
+      - "80:80"
 
-
-  client.monitor.paicoop.net:
-      build: ./
-      container_name: monitor-client
-      restart: always
-      command: USER=paicoop.net
-      network_mode: "host"
+  monitor-client:
+    build: ./client
+    container_name: monitor-client
+    restart: always
+    command: USER=paicoop.net
+    #network_mode: "host"
+    depends_on:
+      - monitor-server
